# easy-rgb

./: .gitignore  Cargo.toml  Makefile  flake.nix
.github/workflows/: build.yml  integration.yml
rgb-cln/: Cargo.toml
rgb-cln/src/: main.rs  plugin.rs
rgb-cln/src/plugin/: macros.rs  walletrpc.rs
rgb-common/: Cargo.toml
rgb-common/src/: comm.rs  internal_wallet.rs  lib.rs  proxy.rs  rgb_manager.rs  rgb_storage.rs  types.rs  wallet.rs
rgb-testing/: Cargo.toml  docker-compose.yaml
rgb-testing/datacore/regtest/: .cookie
rgb-testing/datacore/regtest/blocks/index/: 000005.ldb
rgb-testing/datacore/regtest/chainstate/: 000005.ldb  000008.ldb
rgb-testing/datacore/regtest/indexes/txindex/: 000005.ldb
rgb-testing/dataindex/regtest/: 000014.sst  IDENTITY  LOG  LOG.old.1710795114252280  MANIFEST-000015
rgb-testing/src/: electrs.rs  lib.rs  utils.rs
