[package]
name = "rgb-cln"
version = "0.1.0"
edition = "2021"

[dependencies]
clightningrpc = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", features = [ "log" ] }
clightningrpc-plugin-macros = { git = "https://github.com/laanwj/cln4rust.git" }
vls-core = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git" }
log = "0.4.20"
anyhow = "1.0.79"
serde = "1.0.159"
serde_json = "1.0.95"
rgb-common = { path = "../rgb-common" }
