[package]
name = "rgb-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
clightning-testing = { git = "https://github.com/laanwj/cln4rust.git" }
env_logger = "0.11.1"
anyhow = "1.0.71"
log = "0.4"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.1"
